--- a/backoffice_admin/pyproject.toml
+++ b/backoffice_admin/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "django-cors-headers (>=4.7.0,<5.0.0)",
     "python-decouple (>=3.8,<4.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "pillow (>=11.3.0,<12.0.0)"
+    "pillow (>=11.3.0,<12.0.0)",
+    "requests (>=2.32.4,<3.0.0)"
 ]
 
 
